Refactoring net.jxse to edu.uci.ics.luci.jxse

--- a/src/main/resources/net/jxse/OSGi/JxseOSGi.properties
+++ b/src/main/resources/net/jxse/OSGi/JxseOSGi.properties
@@ -1,1 +1,1 @@
-FRAMEWORK_LAUNCHER=net.jxse.impl.OSGi.JxseOSGiFelixFrameworkLauncher
+FRAMEWORK_LAUNCHER=edu.uci.ics.luci.jxse.impl.OSGi.JxseOSGiFelixFrameworkLauncher
