--- a/src/main/resources/net/jxse/impl/OSGi/Felix.properties
+++ b/src/main/resources/net/jxse/impl/OSGi/Felix.properties
@@ -33,11 +33,11 @@ felix.embedded.execution=true
 #
 # For example:
 #
-# felix.systembundle.activators_1=net.jxse.impl.OSGi.DefaultService
+# felix.systembundle.activators_1=edu.uci.ics.luci.jxse.impl.OSGi.DefaultService
 # felix.systembundle.activators_2=my.com.impl.GreatOSGiService
 #
 
-felix.systembundle.activators_1=net.jxse.impl.OSGi.Activators.JxseOSGiNetworkManagerActivator
+felix.systembundle.activators_1=edu.uci.ics.luci.jxse.impl.OSGi.Activators.JxseOSGiNetworkManagerActivator
 #
 # Properties file for the Felix OSGi framework
 #
@@ -73,8 +73,8 @@ felix.embedded.execution=true
 #
 # For example:
 #
-# felix.systembundle.activators_1=net.jxse.impl.OSGi.DefaultService
+# felix.systembundle.activators_1=edu.uci.ics.luci.jxse.impl.OSGi.DefaultService
 # felix.systembundle.activators_2=my.com.impl.GreatOSGiService
 #
 
-felix.systembundle.activators_1=net.jxse.impl.OSGi.Activators.JxseOSGiNetworkManagerActivator
+felix.systembundle.activators_1=edu.uci.ics.luci.jxse.impl.OSGi.Activators.JxseOSGiNetworkManagerActivator
