Setting up BouncyCastle 1.47 to be a non-maven dependency for p2p4java b/c Android uses 1.47 natively and maven only seems to have 1.40

--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/bcprov-ext-jdk15on-147.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
