requiring findbugs in the configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ target
 
 # Libraries required but not included in the distribution
 lib/bcprov-ext-jdk15on-147.jar
+lib/annotations.jar
+lib/jsr305.jar
