--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/bcprov-ext-jdk15on-147.jar"/>
+	<classpathentry kind="lib" path="lib/annotations.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
