--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ target
 lib/bcprov-ext-jdk15on-147.jar
 lib/annotations.jar
 lib/jsr305.jar
+lib/netty-3.6.6.Final-sources.jar
+lib/netty-3.6.6.Final.jar
+lib/iainmcgin-netty-httptunnel
+lib/httptunnel-1.0.jar
