--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target
 lib/bcprov-ext-jdk15on-147.jar
 lib/annotations.jar
 lib/jsr305.jar
+lib/luci-utility.jar
 lib/netty-3.6.6.Final-sources.jar
 lib/netty-3.6.6.Final.jar
 lib/iainmcgin-netty-httptunnel
