--- a/.classpath
+++ b/.classpath
@@ -4,13 +4,13 @@
 	<classpathentry exported="true" kind="lib" path="lib/httptunnel-1.0.jar" sourcepath="lib/iainmcgin-netty-httptunnel-60f8be5eca55/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr305.jar"/>
-	<classpathentry kind="lib" path="lib/luci-utility.jar"/>
 	<classpathentry kind="lib" path="lib/processing/controlP5.jar"/>
 	<classpathentry kind="lib" path="lib/processing/core.jar"/>
 	<classpathentry kind="lib" path="lib/processing/gluegen-rt-natives-macosx-universal.jar"/>
 	<classpathentry kind="lib" path="lib/processing/gluegen-rt.jar"/>
 	<classpathentry kind="lib" path="lib/processing/jogl-all-natives-macosx-universal.jar"/>
 	<classpathentry kind="lib" path="lib/processing/jogl-all.jar"/>
+	<classpathentry kind="lib" path="lib/json-smart-1.1.1.jar"/>
 	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -44,5 +44,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/luci-utility.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
