Tweaking p2p4java to be based on 1.6

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ target
 .cache
 */.DS_Store
 
+#This should be developer specific, no?
+*.classpath
+
 # Libraries required but not included in the distribution
 lib/bcprov-ext-jdk15on-147.jar
 lib/annotations.jar
