--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/bcprov-ext-jdk15on-147.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httptunnel-1.0.jar" sourcepath="lib/iainmcgin-netty-httptunnel-60f8be5eca55/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-smart-1.1.1.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/annotations.jar"/>
 	<classpathentry kind="lib" path="lib/jsr305.jar"/>
 	<classpathentry kind="lib" path="lib/processing/controlP5.jar"/>
@@ -41,6 +36,11 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/examples"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
