--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ target
 #generated files
 p2p4java.jar
 .jxta
+bin
 
 # Libraries required but not included in the distribution
 lib/bcprov-ext-jdk15on-147.jar
